--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
+    "@tailwindcss/forms": "^0.5.1",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
