--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.1.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^9.1.0",
     "react-tippy": "^1.4.0",
     "tailwind-merge": "^1.2.1"
   },
