--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.1",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^9.1.0",
