--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.2",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "framer-motion": "^6.3.3",
