--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "react": "18.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.1.0",
+    "react-dropzone": "^14.2.1",
     "react-hook-form": "^7.31.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^9.1.0",
+    "react-select": "^5.3.2",
     "react-tippy": "^1.4.0",
     "tailwind-merge": "^1.2.1"
   },
