--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "framer-motion": "^6.3.6",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
     "next-themes": "^0.2.0",
     "nextjs-progressbar": "^0.0.14",
@@ -33,7 +34,9 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.2.0",
+    "react-paginate": "^8.1.3",
     "react-select": "^5.3.2",
+    "react-table": "^7.8.0",
     "react-tippy": "^1.4.0",
     "tailwind-merge": "^1.2.1"
   },
@@ -41,8 +44,11 @@
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
     "@tailwindcss/forms": "^0.5.2",
+    "@types/lodash": "^4.14.182",
     "@types/node": "17.0.38",
     "@types/react": "18.0.10",
+    "@types/react-paginate": "^7.1.1",
+    "@types/react-table": "^7.7.12",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "autoprefixer": "^10.4.7",
