--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@headlessui/react": "^1.6.4",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
-    "framer-motion": "^6.3.6",
+    "framer-motion": "^6.3.10",
     "lodash": "^4.17.21",
     "next": "12.1.6",
     "next-themes": "^0.2.0",
@@ -38,6 +38,9 @@
     "react-select": "^5.3.2",
     "react-table": "^7.8.0",
     "react-tippy": "^1.4.0",
+    "sweetalert2": "^11.4.17",
+    "sweetalert2-react-content": "^5.0.0",
+    "swr": "^1.3.0",
     "tailwind-merge": "^1.2.1"
   },
   "devDependencies": {
