ci: pm2 \rocket:

--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -2,7 +2,7 @@
   "apps": [
     {
       "name": "ouralapak-frontend",
-      "script": "npm",
+      "script": "yarn",
       "args": "start",
       "instances": 1,
       "autorestart": true,
