feat: pm2 start :rocket:

--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -2,15 +2,13 @@
   "apps": [
     {
       "name": "ouralapak-frontend",
-      "script": "yarn",
+      "cwd": "./",
+      "script": "node_modules/next/dist/bin/next",
       "args": "start",
       "instances": 1,
-      "autorestart": true,
-      "watch": false,
-      "time": true,
-      "env": {
-        "NODE_ENV": "production"
-      }
+      "exec_mode": "cluster",
+      "autorestart": false,
+      "max_memory_restart": "2G"
     }
   ]
 }
