--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -4,7 +4,7 @@
       "name": "ouralapak-frontend",
       "cwd": "./",
       "script": "node_modules/next/dist/bin/next",
-      "args": "start",
+      "args": "start -p 3001",
       "instances": 1,
       "exec_mode": "cluster",
       "autorestart": false,
