--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pm2:start": "pm2 start ecosystem.config.json --no-daemon"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.3.1",
     "@headlessui/react": "^1.6.4",
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
@@ -50,7 +51,9 @@
     "react-table": "^7.8.0",
     "react-tippy": "^1.4.0",
     "react-toastify": "^9.0.4",
+    "react-use": "^17.4.0",
     "sass": "^1.52.3",
+    "sharp": "^0.30.6",
     "sweetalert2": "^11.4.17",
     "sweetalert2-react-content": "^5.0.0",
     "swiper": "^8.2.4",
