--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postbuild": "next-sitemap",
     "export": "next export",
     "start": "next start",
+    "clean": "rimraf .next out",
     "deduplicate": "npx yarn-deduplicate && yarn install",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && yarn format",
@@ -84,6 +85,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.0",
     "prettier-plugin-tailwindcss": "^0.1.11",
+    "rimraf": "^3.0.2",
     "tailwindcss": "^3.1.3",
     "typescript": "4.7.3"
   }
