--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.32.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
+    "react-image-lightbox": "^5.1.4",
     "react-intersection-observer": "^9.3.3",
     "react-loader-spinner": "^5.1.5",
     "react-paginate": "^8.1.3",
