--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "18.1.0",
     "react-drag-drop-files": "^2.3.7",
     "react-dropzone": "^14.2.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.32.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
@@ -70,6 +71,7 @@
     "@types/lodash": "^4.14.182",
     "@types/node": "17.0.41",
     "@types/react": "18.0.14",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-paginate": "^7.1.1",
     "@types/react-table": "^7.7.12",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
