--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-themes": "^0.2.0",
     "nextjs-progressbar": "^0.0.14",
     "preact": "^10.7.3",
+    "query-string": "^7.1.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-burger-menu": "^3.0.8",
@@ -51,6 +52,7 @@
     "react-redux": "^8.0.2",
     "react-responsive-modal": "^6.2.0",
     "react-select": "^5.3.2",
+    "react-spinners": "^0.12.0",
     "react-table": "^7.8.0",
     "react-tippy": "^1.4.0",
     "react-toastify": "^9.0.4",
