--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
     "@typescript-eslint/semi": "error",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "@next/next/no-img-element": "off",
     "unused-imports/no-unused-imports": "warn",
     "unused-imports/no-unused-vars": [
