--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
+    "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.3.5",
     "framer-motion": "^6.3.11",
     "lodash": "^4.17.21",
     "next": "12.1.6",
