--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-intersection-observer": "^9.3.5",
     "react-loader-spinner": "^5.1.5",
     "react-paginate": "^8.1.3",
+    "react-phone-number-input": "^3.2.3",
     "react-player": "^2.10.1",
     "react-redux": "^8.0.2",
     "react-responsive-modal": "^6.2.0",
@@ -77,6 +78,7 @@
     "@types/react": "18.0.14",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-paginate": "^7.1.1",
+    "@types/react-phone-number-input": "^3.0.14",
     "@types/react-table": "^7.7.12",
     "@typescript-eslint/eslint-plugin": "^5.30.3",
     "@typescript-eslint/parser": "^5.30.3",
