--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-table": "^7.8.0",
     "react-tippy": "^1.4.0",
     "react-toastify": "^9.0.5",
+    "react-tooltip": "^4.2.21",
     "react-use": "^17.4.0",
     "sass": "^1.53.0",
     "sharp": "^0.30.7",
