--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-phone-number-input": "^3.2.3",
     "react-player": "^2.10.1",
     "react-redux": "^8.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-responsive-modal": "^6.2.0",
     "react-select": "^5.4.0",
     "react-spinners": "^0.13.3",
