--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-responsive-modal": "^6.2.0",
     "react-select": "^5.4.0",
+    "react-spinner-material": "^1.4.0",
     "react-spinners": "^0.13.3",
     "react-table": "^7.8.0",
     "react-tippy": "^1.4.0",
