--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-tippy": "^1.4.0",
     "react-toastify": "^9.0.5",
     "react-tooltip": "^4.2.21",
+    "react-tsparticles": "^2.1.3",
     "react-use": "^17.4.0",
     "sass": "^1.53.0",
     "sharp": "^0.30.7",
@@ -70,6 +71,8 @@
     "swiper": "^8.3.1",
     "swr": "^1.3.0",
     "tailwind-merge": "^1.4.0",
+    "tsparticles": "^2.1.3",
+    "tsparticles-engine": "^2.1.3",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
