--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns-tz": "^1.3.6",
     "framer-motion": "^6.5.1",
     "lodash": "^4.17.21",
+    "merge-images": "^2.0.0",
     "next": "12.2.3",
     "next-themes": "^0.2.0",
     "nextjs-progressbar": "^0.0.14",
@@ -47,6 +48,7 @@
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
     "react-image-lightbox": "^5.1.4",
+    "react-infinite-scroller": "^1.2.6",
     "react-intersection-observer": "^9.4.0",
     "react-loader-spinner": "^5.1.5",
     "react-paginate": "^8.1.3",
@@ -80,9 +82,11 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@tailwindcss/forms": "^0.5.2",
     "@types/lodash": "^4.14.182",
+    "@types/merge-images": "^1.2.1",
     "@types/node": "18.6.0",
     "@types/react": "18.0.15",
     "@types/react-google-recaptcha": "^2.1.5",
+    "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-paginate": "^7.1.1",
     "@types/react-phone-number-input": "^3.0.14",
     "@types/react-table": "^7.7.12",
