--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.33.1",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-image-lightbox": "^5.1.4",
     "react-infinite-scroller": "^1.2.6",
     "react-intersection-observer": "^9.4.0",
