--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-bootstrap": "^2.4.0",
     "react-burger-menu": "^3.0.8",
     "react-calendar": "^3.7.0",
+    "react-content-loader": "^6.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-drag-drop-files": "^2.3.7",
