--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "chart.js": "^3.9.1",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.1",
     "date-fns-tz": "^1.3.6",
@@ -39,6 +40,7 @@
     "react-bootstrap": "^2.4.0",
     "react-burger-menu": "^3.0.8",
     "react-calendar": "^3.7.0",
+    "react-chartjs-2": "^4.3.1",
     "react-content-loader": "^6.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
