--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@svgr/webpack": "^6.3.1",
     "@tailwindcss/forms": "^0.5.2",
     "@types/lodash": "^4.14.182",
     "@types/merge-images": "^1.2.1",
