--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-content-loader": "^6.2.0",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-drag-drop-files": "^2.3.7",
     "react-dropzone": "^14.2.2",
@@ -90,6 +91,7 @@
     "@types/merge-images": "^1.2.1",
     "@types/node": "18.6.2",
     "@types/react": "18.0.15",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-paginate": "^7.1.1",
