--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pm2:start": "pm2 start ecosystem.config.json --no-daemon"
   },
   "dependencies": {
+    "@fontsource/rubik": "^4.5.11",
     "@hcaptcha/react-hcaptcha": "^1.4.4",
     "@headlessui/react": "^1.6.6",
     "@reduxjs/toolkit": "^1.8.3",
