--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.21",
     "merge-images": "^2.0.0",
     "next": "12.2.3",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.0",
     "nextjs-progressbar": "^0.0.14",
     "preact": "^10.10.0",
