--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "prepare": "husky install",
-    "pm2:start": "pm2 start ecosystem.config.json --no-daemon"
+    "pm2": "pm2",
+    "pm2:start": "pm2 start ecosystem.config.json"
   },
   "dependencies": {
     "@fontsource/rubik": "^4.5.11",
@@ -36,6 +37,7 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.0",
     "nextjs-progressbar": "^0.0.14",
+    "pm2": "^5.2.2",
     "preact": "^10.10.0",
     "query-string": "^7.1.1",
     "react": "18.2.0",
